# python-claw

./: .dockerignore  .env.demo  .env.example  .gitignore  CLAUDE.md  CODEOWNERS  Dockerfile  Overview.md  README.md  alembic.ini  docker-compose.app.yml  docker-compose.yml  env_settings.md  example.md  example2.md  examplev3.md  examplev4.md  examplev5.md  pyproject.toml  quick_start.md  test.db
.claude/: settings.local.json
.codex/prompts/: speckit.plan.md
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
apps/gateway/: deps.py  main.py
apps/node_runner/: __init__.py  executor.py  main.py  policy.py
docs/: Database.md  Demo.md  QA_GUIDE.md  Summary.docx  agents_sub_agents.md  agents_sub_agents_old.md  architecture.md  architecture_change.md  env_settings.md  features_plan.md  features_plan018_29.md  memory.docx  memory.md  message_flow.md  openclaw_spec_kit_program.md  sub-agents.md  summary.md
example/: example.md  examplev5.md  quick_start.md  webchat.html  webhook-receiver.js
migrations/: env.py
scripts/: worker_loop.py
src/db/: base.py  (+2 more)
tests/: conftest.py  test_api.py  test_approval_continuation.py  test_async_queueing_coverage.py  test_channels_media.py  test_db_session.py  test_idempotency.py  test_integration.py  test_node_sandbox.py  test_observability.py  test_provider_runtime.py  test_repository.py  test_routing.py  test_runtime.py  test_spec_011.py  test_spec_012.py  test_spec_014.py  test_spec_015.py  test_spec_016.py  test_spec_017.py  test_typed_tool_schemas.py
(+202 files in other folders)
